tests/invalid/type/sealed_inherit.pts
sealed prototype Base {}

prototype Child : Base {}
